<resources>
    <string name="app_name">SisfoRupa</string>
    <string name="nama">Jonathan Graciano</string>
    <string name="nim">H1101171033</string>
    <string name="simulasi_nilai">Simulasi Nilai</string>
    <string name="cuaca">Cuaca</string>
    <string name="nilai">Nilai</string>
    <string name="profil">Profil</string>
    <string name="ikon1">Konsultasi</string>
    <string name="ikon2">Blueprint</string>
    <string name="saran">Saran</string>
    <string name="tentang">Tentang</string>
    <string name="absen">Absen</string>
    <string name="tugas">Tugas</string>
    <string name="uts">UTS</string>
    <string name="uas">UAS</string>
    <string name="ht">Hitung</string>
</resources>
